--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "chatgpt-chrome-extension",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "jest e2e.test.js --testTimeout=30000"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
-    "puppeteer": "^24.8.2"
+    "puppeteer": "^19.7.0"
   }
 }
